[package]
name = "advent-of-code-2023-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
num = "0.4.1"
priority-queue = "1.3.2"
regex = "1.10.2"
structopt = "0.3.26"
